--- a/dev/index.html
+++ b/dev/index.html
@@ -54,9 +54,9 @@
                                         <span class="cv-address">Bulgaria, Veliko Tarnovo</span>
                                     </div>
                                     <div class="col-12 col-sm-6">
-                                        <a href="https://martink1990.github.io/martins-cv/" title="My web page" target="_blank"
+                                        <a href="https://github.com/martink1990" title="My GitHub Profile" target="_blank"
                                             class="cv-website">
-                                            martink1990.github.io/martins-cv
+                                            GitHub Profile
                                         </a>
                                     </div>
                                 </div>
