Fixed spacing between titles text

--- a/dev/index.html
+++ b/dev/index.html
@@ -85,10 +85,7 @@
                         <!-- CV Work experience box -->
                         <section class="row cv-main-row">
                             <div class="col-12 col-lg-4 col-xl-5 cv-main-col cv-main-points cv-main-gutter-right">
-                                <h2>
-                                    Work<br />
-                                    Experience
-                                </h2>
+                                <h2>Work Experience</h2>
                             </div>
                             <div
                                 class="col-12 col-lg-8 col-xl-7 cv-main-col cv-main-gutter-left cv-main-icon cv-work-icon">
@@ -249,10 +246,7 @@
                         <!-- CV Hobbies and interests box -->
                         <section class="row cv-main-row">
                             <div class="col-12 col-lg-4 col-xl-5 cv-main-col cv-main-points cv-main-gutter-right">
-                                <h2>
-                                    Hobbies<br />
-                                    and interests
-                                </h2>
+                                <h2>Hobbies and interests</h2>
                             </div>
                             <div
                                 class="col-12 col-lg-8 col-xl-7 cv-main-col cv-main-gutter-left cv-main-icon cv-hobbies-icon">
