Fixed text spacing and text size on mobile

--- a/dev/index.html
+++ b/dev/index.html
@@ -168,8 +168,7 @@
                                     <h3>
                                         Finance and Banking - <span class="degree-type">Master's degree</span>
                                         <strong>
-                                            UNIVERSITY OF AGRIBUSINESS AND<br />
-                                            REGIONAL DEVELOPMENT / 2014 - 2015
+                                            UNIVERSITY OF AGRIBUSINESS AND REGIONAL DEVELOPMENT / 2014 - 2015
                                         </strong>
                                     </h3>
                                 </div>
@@ -178,8 +177,7 @@
                                     <h3 class="has-point">
                                         Еconomy of Tourism - <span class="degree-type">Bachelor's degree</span>
                                         <strong>
-                                            UNIVERSITY OF AGRIBUSINESS AND<br />
-                                            REGIONAL DEVELOPMENT / 2010 - 2014
+                                            UNIVERSITY OF AGRIBUSINESS AND REGIONAL DEVELOPMENT / 2010 - 2014
                                         </strong>
                                     </h3>
                                 </div>
