--- a/dev/index.html
+++ b/dev/index.html
@@ -17,7 +17,7 @@
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Open+Sans&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;1,600&family=Open+Sans&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Site CSS -->
     <link rel="stylesheet" href="css/main.css" />
