redesign portfolio and skills sections

--- a/dev/index.html
+++ b/dev/index.html
@@ -113,44 +113,44 @@
                                 <ul class="portfolio-list">
                                     <li>
                                         <a href="https://www.bakerautorepair.com/" title="Visit page" target="_blank">
-                                            https://www.bakerautorepair.com/
+                                            bakerautorepair.com
                                         </a>
                                     </li>
                                     <li>
                                         <a href="https://longviewautotire.com/" title="Visit page" target="_blank">
-                                            https://longviewautotire.com/
+                                            longviewautotire.com
                                         </a>
                                     </li>
                                     <li>
                                         <a href="https://www.eurocartech.pro/" title="Visit page" target="_blank">
-                                            https://www.eurocartech.pro/
+                                            eurocartech.pro
                                         </a>
                                     </li>
                                     <li>
                                         <a href="https://www.courtesyautomotiveservicesinc.com/" title="Visit page"
                                             target="_blank">
-                                            https://www.courtesyautomotiveservicesinc.com/
+                                            courtesyautomotiveservicesinc.com
                                         </a>
                                     </li>
                                     <li>
                                         <a href="https://www.mbautoinc.com/" title="Visit page" target="_blank">
-                                            https://www.mbautoinc.com/
+                                            mbautoinc.com
                                         </a>
                                     </li>
                                     <li>
                                         <a href="https://www.concordautorepair.net/" title="Visit page" target="_blank">
-                                            https://www.concordautorepair.net/
+                                            concordautorepair.net
                                         </a>
                                     </li>
                                     <li>
                                         <a href="https://www.amazingautoandtransmissionrepair.com/" title="Visit page"
                                             target="_blank">
-                                            https://www.amazingautoandtransmissionrepair.com/
+                                            amazingautoandtransmissionrepair.com
                                         </a>
                                     </li>
                                     <li>
                                         <a href="https://www.napaelite.com/" title="Visit page" target="_blank">
-                                            https://www.napaelite.com/
+                                            napaelite.com
                                         </a>
                                     </li>
                                 </ul>
@@ -193,51 +193,41 @@
                                 <!-- CV Professional skills box -->
                                 <div class="cv-main-mini-box">
                                     <h3>Professional Skills</h3>
-                                    <div class="skills-list-box">
-                                        <ul class="skills-list pro-skills-list">
-                                            <li><strong class="trigger-bar bar-100">HTML</strong></li>
-                                            <li><strong class="trigger-bar bar-100">CSS</strong></li>
-                                            <li><strong class="trigger-bar bar-100">Bootstrap</strong></li>
-                                            <li><strong class="trigger-bar bar-60">Photoshop</strong></li>
-                                            <li><strong class="trigger-bar bar-40">jQuery</strong></li>
-                                        </ul>
-                                        <ul class="skills-list pro-skills-list">
-                                            <li><strong class="trigger-bar bar-50">SVN</strong></li>
-                                            <li><strong class="trigger-bar bar-40">Filezilla</strong></li>
-                                            <li><strong class="trigger-bar bar-20">Gulp</strong></li>
-                                            <li><strong class="trigger-bar bar-40">SASS</strong></li>
-                                            <li><strong class="trigger-bar bar-20">GIT</strong></li>
-                                        </ul>
-                                    </div>
+                                    <ul class="skills-list pro-skills-list">
+                                        <li><strong class="trigger-bar bar-100">HTML</strong></li>
+                                        <li><strong class="trigger-bar bar-100">CSS</strong></li>
+                                        <li><strong class="trigger-bar bar-100">Bootstrap</strong></li>
+                                        <li><strong class="trigger-bar bar-60">Photoshop</strong></li>
+                                        <li><strong class="trigger-bar bar-40">jQuery</strong></li>
+                                        <li><strong class="trigger-bar bar-50">SVN</strong></li>
+                                        <li><strong class="trigger-bar bar-40">Filezilla</strong></li>
+                                        <li><strong class="trigger-bar bar-20">Gulp</strong></li>
+                                        <li><strong class="trigger-bar bar-40">SASS</strong></li>
+                                        <li><strong class="trigger-bar bar-20">GIT</strong></li>
+                                    </ul>
                                 </div>
                                 <!-- CV Personal skills box -->
                                 <div class="cv-main-mini-box">
                                     <h3 class="has-point">Personal Skills</h3>
-                                    <div class="skills-list-box">
-                                        <ul class="skills-list personal-skills-list">
-                                            <li><strong class="trigger-bar bar-100">Self-Motivation</strong></li>
-                                            <li><strong class="trigger-bar bar-80">Teamwork</strong></li>
-                                            <li><strong class="trigger-bar bar-80">Communication</strong></li>
-                                            <li><strong class="trigger-bar bar-100">Responsibility</strong></li>
-                                        </ul>
-                                        <ul class="skills-list personal-skills-list">
-                                            <li><strong class="trigger-bar bar-80">Organization</strong></li>
-                                            <li><strong class="trigger-bar bar-80">Creativity</strong></li>
-                                            <li><strong class="trigger-bar bar-80">Flexibility</strong></li>
-                                            <li><strong class="trigger-bar bar-100">Precision</strong></li>
-                                        </ul>
-                                    </div>
+                                    <ul class="skills-list personal-skills-list">
+                                        <li><strong class="trigger-bar bar-100">Self-Motivation</strong></li>
+                                        <li><strong class="trigger-bar bar-80">Teamwork</strong></li>
+                                        <li><strong class="trigger-bar bar-80">Communication</strong></li>
+                                        <li><strong class="trigger-bar bar-100">Responsibility</strong></li>
+                                        <li><strong class="trigger-bar bar-80">Organization</strong></li>
+                                        <li><strong class="trigger-bar bar-80">Creativity</strong></li>
+                                        <li><strong class="trigger-bar bar-80">Flexibility</strong></li>
+                                        <li><strong class="trigger-bar bar-100">Precision</strong></li>
+                                    </ul>
                                 </div>
                                 <!-- CV Language skills box -->
                                 <div class="cv-main-mini-box">
                                     <h3 class="has-point">Language Skills</h3>
-                                    <div class="skills-list-box">
-                                        <ul class="skills-list language-skills-list">
-                                            <li><strong class="trigger-bar bar-60">English (speaking)</strong></li>
-                                            <li><strong class="trigger-bar bar-80">English (writing)</strong></li>
-                                            <li><strong class="trigger-bar bar-100">English (reading)</strong></li>
-                                        </ul>
-                                    </div>
+                                    <ul class="skills-list language-skills-list">
+                                        <li><strong class="trigger-bar bar-60">English (speaking)</strong></li>
+                                        <li><strong class="trigger-bar bar-80">English (writing)</strong></li>
+                                        <li><strong class="trigger-bar bar-100">English (reading)</strong></li>
+                                    </ul>
                                 </div>
                             </div>
                         </section>
